--- a/jobMarket/package.json
+++ b/jobMarket/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "ng2-charts": "^2.3.0",
