--- a/jobMarket/package.json
+++ b/jobMarket/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.4.0",
